# TurtleOS-CLI

./: pyproject.toml
src/: main.py
